2015-03-12 Ben Shi <powerstudio1st AT 163 DOT com>
	* src/SDCCerr.c:
	* src/SDCCerr.h:
	* src/SDCC.y:
	  Add a new warning: anonymous member in struct/union.

2015-03-11 Ben Shi <powerstudio1st AT 163 DOT com>
	* src/SDCCval.c:
	* src/SDCCglue.c:
	  Add a new special case in pointer initialization.
	* support/regression/tests/gcc-torture-execute-const-addr-expr-1.c:
	  Enabled.
	* support/regression/test-1898.c:
	  Add a new test case.

2015-03-06 Ben Shi <powerstudio1st AT 163 DOT com>
	* src/SDCCsymt.c:
	* src/SDCCerr.h:
	* src/SDCCerr.c:
	  Add a warning for a flexible array in a struct.

2015-02-25 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c:
	  Speed up stm8 port by skipping output early in dry runs and making some aop tests more efficient,
	  fix code generation bug in shifts.

2015-02-25 Ben Shi <powerstudio1st AT 163 DOT com>
        * support/regression/tests/bug-2031.c:
          Add a new test case.
        * src/SDCCglue.c:
        * src/SDCCval.c:
        * src/SDCCval.h:
        * pic16/glue.c:
          Enable a global char/int/long variable initialized by an address (const pointer).

2015-02-24 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c:
	  Fix bug in stm8 comparison code generation.

2015-02-23 Ben Shi <powerstudio1st AT 163 DOT com>
	* support/regression/tests/bug-2357.c:
	  Improve this test case.

2015-02-22 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c,
	  src/z80/main.c:
	  Improve z88dk compability (patch provided by z88dk).

2015-02-20 Ben Shi <powerstudio1st AT 163 DOT com>
	* support/regression/tests/bug-2357.c:
	  A new test case.
	* support/regression/tests/gcc-torture-execute-20000412-1.c:
	  Enabled.
	* src/SDCCerr.c:
	  Change E_CODE_NO_INIT from an error to a warning.
	* src/SDCCast.c:
	  Fix a bug in selecting type of an array index.

2015-02-17 Ben Shi <powerstudio1st AT 163 DOT com>
	* support/regression/tests/bug-1953.c:
	  Disable failed tests.
